Update history management to keep the history entries of a shell session contiguous; make HISTSIZE infinite.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,6 @@
+set-option -g history-file "$VOLATILE_CONFIG/$USER/.tmux_history"
 set-option -g renumber-windows on
+set-hook   -g session-closed _disposeHistoryOrphans
 
 bind-key y copy-mode
 bind-key p paste-buffer
