--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,8 @@
-set-option -g history-file "$VOLATILE_CONFIG/$USER/.tmux_history"
+set-hook -g session-created 'run-shell "mkdir -p $VOLATILE_CONFIG/$USER/tmux/.history"'
+set-hook -g session-closed _disposeHistoryOrphans
+
+set-option -g history-file "$VOLATILE_CONFIG/$USER/tmux/.history"
 set-option -g renumber-windows on
-set-hook   -g session-closed _disposeHistoryOrphans
 
 bind-key y copy-mode
 bind-key p paste-buffer
