--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,7 @@
-set-hook -g session-created 'run-shell "mkdir -p $VOLATILE_CONFIG/$USER/tmux/.history"'
+set-hook -g session-created 'run-shell "mkdir -p $VOLATILE_CONFIG/$USER/tmux/history"'
 set-hook -g session-closed _disposeHistoryOrphans
 
-set-option -g history-file "$VOLATILE_CONFIG/$USER/tmux/.history"
+set-option -g history-file "$VOLATILE_CONFIG/$USER/tmux/history/.history"
 set-option -g renumber-windows on
 
 bind-key y copy-mode
