Correct the tmux hook name for '_disposeHistoryOrphans'.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,5 @@
 set-hook -g session-created 'run-shell "mkdir -p $VOLATILE_CONFIG/$USER/tmux/history"'
-set-hook -g session-created 'run-shell "_disposeHistoryOrphans"'
+set-hook -g session-closed 'run-shell "_disposeHistoryOrphans"'
 
 set-option -g history-file "$VOLATILE_CONFIG/$USER/tmux/history/.history"
 set-option -g renumber-windows on
