--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -32,27 +32,37 @@ set-option -g status-bg colour237
 set-option -g status-fg colour223
 
 # default window title colors
-set-window-option -g window-status-bg colour246
-set-window-option -g window-status-fg colour237
+# TODO: Tmux alerts that the following is an invalid option.
+# set-window-option -g window-status-bg colour246
+# TODO: Tmux alerts that the following is an invalid option.
+# set-window-option -g window-status-fg colour237
 
-set-window-option -g window-status-activity-bg colour237
-set-window-option -g window-status-activity-fg colour248
+# TODO: Tmux alerts that the following is an invalid option.
+# set-window-option -g window-status-activity-bg colour237
+# TODO: Tmux alerts that the following is an invalid option.
+# set-window-option -g window-status-activity-fg colour248
 
 # active window title colors
-set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-fg colour237
+# TODO: Tmux alerts that the following is an invalid option.
+# set-window-option -g window-status-current-bg default
+# TODO: Tmux alerts that the following is an invalid option.
+# set-window-option -g window-status-current-fg colour237
 
 # pane border
 set-option -g pane-active-border-style fg=colour237,bg=colour235
 set-option -g pane-border-style        fg=colour237,bg=colour235
 
 # message infos
-set-option -g message-bg colour239
-set-option -g message-fg colour223
+# TODO: Tmux alerts that the following is an invalid option.
+# set-option -g message-bg colour239
+# TODO: Tmux alerts that the following is an invalid option.
+# set-option -g message-fg colour223
 
-# writting commands inactive
-set-option -g message-command-bg colour239
-set-option -g message-command-fg colour223
+# writing commands inactive
+# TODO: Tmux alerts that the following is an invalid option.
+# set-option -g message-command-bg colour239
+# TODO: Tmux alerts that the following is an invalid option.
+# set-option -g message-command-fg colour223
 
 # pane number display
 set-option -g display-panes-active-colour colour250
@@ -67,15 +77,20 @@ set-window-option -g window-status-bell-style fg=colour235,bg=colour167
 # pane border
 set-option -g pane-border-format "#{?pane_active, #[fg=colour167]● ,─}"
 
-# theme set-optiontings mixed with colors (unfortunately, but there is no cleaner way)
-set-option -g        status-attr                 "none"
+# theme option-settings mixed with colors (unfortunately, but there is no cleaner way)
+# TODO: Tmux alerts that the following is an invalid option.
+# set-option -g        status-attr                 "none"
 set-option -g        status-justify              "left"
-set-option -g        status-left-attr            "none"
+# TODO: Tmux alerts that the following is an invalid option.
+# set-option -g        status-left-attr            "none"
 set-option -g        status-left-length          "80"
-set-option -g        status-right-attr           "none"
+# TODO: Tmux alerts that the following is an invalid option.
+# set-option -g        status-right-attr           "none"
 set-option -g        status-right-length         "80"
-set-window-option -g window-status-activity-attr "none"
-set-window-option -g window-status-attr          "none"
+# TODO: Tmux alerts that the following is an invalid option.
+# set-window-option -g window-status-activity-attr "none"
+# TODO: Tmux alerts that the following is an invalid option.
+# set-window-option -g window-status-attr          "none"
 set-window-option -g window-status-separator     ""
 
 # Powerline
