--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,13 +11,16 @@ bind-key -T copy-mode-vi Escape send-keys -X cancel
 
 bind-key C-d display-panes
 
-# toggle status bar
+# Toggle status bar.
 bind-key C-s set-option status
 
-# toggle pane border status
+# Toggle pane-border status.
 bind-key C-t set-option -g pane-border-status
 
-# status bar redraw interval
+bind-key -n S-Left swap-window -t -1 # Switch current and preceding windows.
+bind-key -n S-Right swap-window -t +1 # Switch current and following windows.
+
+# Status-bar redraw interval
 set-option -g status-interval 5
 
 ###############
@@ -27,70 +30,29 @@ set-option -g status-interval 5
 # COLORSCHEME: gruvbox dark
 set-option -g status "on"
 
-# default statusbar colors
+# Default statusbar colors
 set-option -g status-bg colour237
 set-option -g status-fg colour223
 
-# default window title colors
-# TODO: Tmux alerts that the following is an invalid option.
-# set-window-option -g window-status-bg colour246
-# TODO: Tmux alerts that the following is an invalid option.
-# set-window-option -g window-status-fg colour237
-
-# TODO: Tmux alerts that the following is an invalid option.
-# set-window-option -g window-status-activity-bg colour237
-# TODO: Tmux alerts that the following is an invalid option.
-# set-window-option -g window-status-activity-fg colour248
-
-# active window title colors
-# TODO: Tmux alerts that the following is an invalid option.
-# set-window-option -g window-status-current-bg default
-# TODO: Tmux alerts that the following is an invalid option.
-# set-window-option -g window-status-current-fg colour237
-
-# pane border
+# Pane border
 set-option -g pane-active-border-style fg=colour237,bg=colour235
 set-option -g pane-border-style        fg=colour237,bg=colour235
+set-option -g pane-border-format "#{?pane_active, #[fg=colour167]● ,─}"
 
-# message infos
-# TODO: Tmux alerts that the following is an invalid option.
-# set-option -g message-bg colour239
-# TODO: Tmux alerts that the following is an invalid option.
-# set-option -g message-fg colour223
-
-# writing commands inactive
-# TODO: Tmux alerts that the following is an invalid option.
-# set-option -g message-command-bg colour239
-# TODO: Tmux alerts that the following is an invalid option.
-# set-option -g message-command-fg colour223
-
-# pane number display
+# Pane-number display
 set-option -g display-panes-active-colour colour250
 set-option -g display-panes-colour        colour237
 
-# clock
+# Clock
 set-window-option -g clock-mode-colour colour246
 
-# bell
+# Bell
 set-window-option -g window-status-bell-style fg=colour235,bg=colour167
 
-# pane border
-set-option -g pane-border-format "#{?pane_active, #[fg=colour167]● ,─}"
-
-# theme option-settings mixed with colors (unfortunately, but there is no cleaner way)
-# TODO: Tmux alerts that the following is an invalid option.
-# set-option -g        status-attr                 "none"
+# Theme option settings mixed with colors
 set-option -g        status-justify              "left"
-# TODO: Tmux alerts that the following is an invalid option.
-# set-option -g        status-left-attr            "none"
 set-option -g        status-left-length          "80"
-# TODO: Tmux alerts that the following is an invalid option.
-# set-option -g        status-right-attr           "none"
 set-option -g        status-right-length         "80"
-# TODO: Tmux alerts that the following is an invalid option.
-# set-window-option -g window-status-activity-attr "none"
-# TODO: Tmux alerts that the following is an invalid option.
-# set-window-option -g window-status-attr          "none"
 set-window-option -g window-status-separator     ""
 
 # Powerline
