--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,6 +11,9 @@ bind-key -T copy-mode-vi Escape send-keys -X cancel
 
 bind-key C-d display-panes
 
+bind-key '"' split-window -v -c "#{pane_current_path}"
+bind-key % split-window -h -c "#{pane_current_path}"
+
 # Toggle status bar.
 bind-key C-s set-option status
 
