--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,7 +2,7 @@ set-option -g history-file "$VOLATILE_CONFIG/$USER/tmux/history/.history"
 set-option -g renumber-windows on
 
 bind-key y copy-mode
-bind-key p paste-buffer
+# bind-key p paste-buffer # Vi-mode in bash provides /tmp buffers for copy-pasting.
 bind-key -T copy-mode-vi v      send-keys -X begin-selection
 bind-key -T copy-mode-vi y      send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 bind-key -T copy-mode-vi Enter  send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
@@ -60,6 +60,6 @@ set-window-option -g window-status-separator     ""
 
 # Powerline
 set-option -g status-left "#[fg=colour246, bg=colour239] <#S>: #[fg=colour239, bg=colour237, nobold, noitalics, nounderscore]"
-set-option -g status-right "#{?pane_dead,dead ,}#{?window_zoomed_flag,zoom ,}#{?pane_synchronized,sync ,}#[fg=colour239, bg=colour237, nobold, nounderscore, noitalics]#[fg=colour246, bg=colour239] #{pane_current_path} #[fg=colour246, bg=colour239, nobold, noitalics, nounderscore]#[fg=colour235, bg=colour246] "
+set-option -g status-right "#{?pane_dead,dead ,}#{?window_zoomed_flag,zoom ,}#{?pane_synchronized,#[bg=red]SYNC#[default] ,}#[fg=colour239, bg=colour237, nobold, nounderscore, noitalics]#[fg=colour246, bg=colour239] #{pane_current_path} #[fg=colour246, bg=colour239, nobold, noitalics, nounderscore]#[fg=colour235, bg=colour246] "
 set-window-option -g window-status-current-format "#[fg=colour237, bg=colour246, nobold, noitalics, nounderscore]#[fg=colour235, bg=colour246] #I. #[fg=colour235, bg=colour246, bold] #W #[fg=colour246, bg=colour237, nobold, noitalics, nounderscore]"
 set-window-option -g window-status-format "#[fg=colour237, bg=colour239, nobold, noitalics, nounderscore]#[fg=colour246,bg=colour239] #I. #[fg=colour246, bg=colour239] #W #[fg=colour239, bg=colour237, noitalics]"
